Reorg home index.html

--- a/index.html
+++ b/index.html
@@ -21,20 +21,27 @@
     <custom-app>
       <main class="container">
         <section>
-          <h1>AppStore & Dashboard Utilities</h1>
+          <header>
+            <img src="public/oversite-logo.png" alt="Oversite Logo" />
+          </header>
           <!-- <h4>Check out these features:</h4> -->
           <div class="grid">
-            <ul>
-              <li><a href="app-store-demo/" role="button">AppStore Demo</a></li>
-              <li><a href="app-store-monitor/" role="button">AppStore Monitor</a></li>
-            </ul>
-            <ul>
-              <li><a href="dashboard/" role="button">Dashboard</a></li>
-              <li><a href="examples/dashboard/js-frontend/" role="button">Dashboard POST Example</a></li>
-            </ul>
-            <ul>
-              <li><a href="examples/auth-form/" role="button">&lt;auth-form&gt;</a></li>
-            </ul>
+            <div>
+              <h2>Apps</h2>
+              <ul>
+                <li><a href="app-store-demo/" role="button">AppStore Demo</a></li>
+                <li><a href="app-store-monitor/" role="button">AppStore Monitor</a></li>
+                <li><a href="dashboard/" role="button">Dashboard</a></li>
+              </ul>
+            </div>
+            <div>
+              <h2>Examples</h2>
+              <ul>
+                <li><a href="examples/dashboard/js-frontend/" role="button">Dashboard POST Example</a></li>
+                <li><a href="examples/auth-form/" role="button">&lt;auth-form&gt;</a></li>
+              </ul>
+              <ul></ul>
+            </div>
           </div>
         </section>
       </main>
