--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <main class="container">
         <section>
           <header>
-            <img src="public/oversite-logo.png" alt="Oversite Logo" />
+            <img src="/oversite-logo.png" alt="Oversite Logo" />
           </header>
           <!-- <h4>Check out these features:</h4> -->
           <div class="grid">
