--- a/app-store-monitor/index.html
+++ b/app-store-monitor/index.html
@@ -22,7 +22,7 @@
     <script type="module" src="../src/components/_register-components.js"></script>
   </head>
   <body>
-    <a href="/" style="position: absolute; top: 0; left: 0; padding: 1rem; ">🏠</a>
+    <home-button></home-button>
     <app-store-init sender="monitor" debug side-debug></app-store-init>
     <app-store-heartbeat key="monitor_heartbeat" value="n/a" interval="30000" show="false"></app-store-heartbeat>
     <notyf-listener></notyf-listener>
