--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -20,7 +20,7 @@
     <script type="module" src="../src/components/_register-components.js"></script>
   </head>
   <body>
-    <a href="/" style="position: absolute; top: 0; left: 0; padding: 1rem; ">🏠</a>
+    <home-button></home-button>
     <app-store-init sender="dashboard" init-keys="*" debug side-debug></app-store-init>
     <app-store-heartbeat key="dashboard_heartbeat" value="n/a" interval="30000" show="false"></app-store-heartbeat>
     <custom-app>
