--- a/examples/oversite-module/frontend/index.html
+++ b/examples/oversite-module/frontend/index.html
@@ -21,7 +21,7 @@
     <app-store-heartbeat key="tablet_heartbeat" value="n/a" interval="30000" show="false"></app-store-heartbeat>
     <custom-app>
       <main class="container">
-        <a href="/" style="position: absolute; top: 0; left: 0; padding: 1rem">🏠</a>
+        <home-button></home-button>
         <section>
           <h1>AppStore Demo</h1>
           <p>A nice way to communicate between apps</p>
