--- a/examples/auth-form/index.html
+++ b/examples/auth-form/index.html
@@ -20,7 +20,7 @@
     <script type="module" src="../../src/components/_register-components.js"></script>
   </head>
   <body>
-    <a href="/" style="position: absolute; top: 0; left: 0; padding: 1rem">🏠</a>
+    <home-button></home-button>
     <app-store-init sender="auth_form_example" init-keys="*" debug side-debug></app-store-init>
     <app-store-heartbeat key="auth_form_heartbeat" value="n/a" interval="30000" show="false"></app-store-heartbeat>
     <notyf-listener></notyf-listener>
