--- a/examples/auth-form/index.html
+++ b/examples/auth-form/index.html
@@ -28,7 +28,7 @@
       <main class="container">
         <section>
           <h1>Auth Form Demo</h1>
-          <p>Different ways of doing auth for oversite apps.</p>
+          <p>(2) different ways of doing auth for oversite apps.</p>
         </section>
         <section>
           <article>
