Fix solid-socket regression & some other small cleanup

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
     <title>AppStore & Dashboard Utilities</title>
     <link rel="stylesheet" href="shared/css/pico.css" />
     <link rel="stylesheet" href="shared/css/styles.css" />
+    <style>
+      div.grid {
+        ul,
+        li {
+          list-style: none;
+          padding: 0;
+        }
+        a {
+          width: 100%;
+        }
+      }
+    </style>
   </head>
   <body>
     <custom-app>
