Update notes & vite config for auth example

--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!-- <app-store-init sender="tablet" init-keys="app_state btn_toggle slider_1 text_input camera_1_health camera_2_health camera_3_health" debug side-debug></app-store-init> -->
-    <app-store-init sender="tablet" init-keys="*" debug side-debug></app-store-init>
+    <app-store-init sender="tablet" channel="default" auth-key="auth-keyy" init-keys="*" debug side-debug></app-store-init>
     <app-store-heartbeat key="tablet_heartbeat" value="n/a" interval="30000" show="false"></app-store-heartbeat>
     <custom-app>
       <main class="container">
