--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -14,7 +14,7 @@
     <meta name="apple-mobile-web-app-title" content="AppStore" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="format-detection" content="email=no">
-    <title>AppStore UI demo</title>
+    <title>AppStore Demo</title>
     <link rel="stylesheet" href="../shared/css/pico.css" />
     <link rel="stylesheet" href="../shared/css/styles.css" />
     <script type="module" src="../src/components/_register-components.js"></script>
