--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -53,7 +53,7 @@
           </p>
           <p>
             <label>app-store-slider</label>
-            <label>slider_1: <code><app-store-element key="slider_1"></app-store-element></code></label>
+            <label>slider_1: <code><app-store-element key="slider_1" flash-on-update></app-store-element></code></label>
             <app-store-slider key="slider_1" value="0" max="1"></app-store-slider>
             MOUSE_X: <code><app-store-element key="MOUSE_X"></app-store-element></code>
             <app-store-slider key="MOUSE_X" value="0" max="1"></app-store-slider>
