--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -61,6 +61,12 @@
             MOUSE_Y: <code><app-store-element key="MOUSE_Y"></app-store-element></code>
             <app-store-slider key="MOUSE_Y" value="0" max="1"></app-store-slider>
           </p>
+          <p>
+            <label>app-store-checkbox</label>
+            <app-store-checkbox key="checkbox_1" >Checkbox 1</app-store-checkbox>
+            <app-store-checkbox key="checkbox_2" value="true">Checkbox 2</app-store-checkbox>
+            <app-store-checkbox key="checkbox_toggle" toggle>Checkbox Toggle</app-store-checkbox>
+          </p>
           <h4>Monitoring</h4>
           <p class="grid">
             <app-store-health key="camera_1_health" value=""></app-store-health>
