--- a/examples/auth-form/index.html
+++ b/examples/auth-form/index.html
@@ -62,7 +62,7 @@
             <h4>Backend auth</h4>
             <p>
               <small>
-                This is secure, but you need to have the full backend server running, and users need to be configured in the root <code>config.json</code> file:
+                This is secure, but you need to have the full backend server running, and users need to be configured in the root <code>.env</code> file:
                 <code>&lt;auth-form api-url="/api/auth" logout-reloads="true"&gt;&lt;/auth-form&gt;</code>
               </small>
             </p>
