--- a/app-store-demo/index.html
+++ b/app-store-demo/index.html
@@ -37,10 +37,11 @@
             <app-store-button key="app_state" value="game_over">Game Over</app-store-button>
           </nav>
           <h4>Special Buttons</h4>
-          <nav>
+          <nav style="display: flex; flex-wrap: wrap; gap: 0.5rem;">
             <app-store-button key="btn_pulse" value="1" momentary>Momentary / Pulse</app-store-button>
             <app-store-button key="btn_toggle" value="0" toggle>Toggle</app-store-button>
             <app-store-button key="btn_confirm" value="true" confirm>Confirm</app-store-button>
+            <app-store-button key="btn_disabled" value="true" disabled>Disabled</app-store-button>
             <app-store-button store-key="test_key" store-value="test_value">Alternate Attributes</app-store-button>
           </nav>
           <h4>Input Fields</h4>
@@ -65,6 +66,7 @@
             <label>app-store-checkbox</label>
             <app-store-checkbox key="checkbox_1" >Checkbox 1</app-store-checkbox>
             <app-store-checkbox key="checkbox_2" value="true">Checkbox 2</app-store-checkbox>
+            <app-store-checkbox key="checkbox_3" disabled>Checkbox 3</app-store-checkbox>
             <app-store-checkbox key="checkbox_toggle" toggle>Checkbox Toggle</app-store-checkbox>
           </p>
           <h4>Monitoring</h4>
