--- a/examples/react/index.html
+++ b/examples/react/index.html
@@ -6,6 +6,7 @@
     <title>Oversite + React</title>
   </head>
   <body>
+    <app-store-init sender="custom-app" init-keys="*" debug side-debug></app-store-init>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
